# TensorVerseHub

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  create_tensorversehub.sh  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
benchmarks/: inference_benchmarks.py  memory_profiling.py  training_benchmarks.py
data/sample_images/: readme.txt
data/sample_text/: readme.txt
data/tfrecords_examples/: readme.txt
docs/: ARCHITECTURE_DIAGRAMS.md  CHANGELOG.md  COMPREHENSIVE_PROJECT_REVIEW.md  CONCEPT_MAP.md  CONTRIBUTING.md  MODEL_OPTIMIZATION_GUIDE.md  PRACTICAL_EXAMPLES.md  QUICK_REFERENCE.md  REVIEW_SUMMARY.md  SECURITY.md  TENSORFLOW_KERAS_BEST_PRACTICES.md  TROUBLESHOOTING.md  WHAT_NEEDS_TO_BE_ADDED.md  contributing.md  index.md  installation.md
docs/api/: data_utils.md  export_utils.md  model_utils.md  optimization_utils.md  visualization.md
docs/deployment/: docker.md  flask.md  streamlit.md  tflite.md
examples/docker/: Dockerfile  docker-compose.yml
examples/optimization_examples/: distillation_demo.py  hyperparameter_tuning_demo.py  pruning_demo.py  quantization_demo.py
examples/serving_examples/: ADVANCED_SERVING_GUIDE.py  flask_tensorflow_api.py  streamlit_tensorflow_demo.py  tflite_inference_example.py
notebooks/01_tensorflow_foundations/: 01_tensors_operations_execution.ipynb  02_data_pipelines_tfrecords.ipynb  03_debugging_profiling.ipynb
notebooks/02_neural_networks_with_keras/: 04_keras_sequential_functional_apis.ipynb  05_keras_custom_layers_models.ipynb  06_keras_callbacks_optimization.ipynb
notebooks/03_computer_vision/: 07_cnn_architectures_keras.ipynb  08_transfer_learning_applications.ipynb  09_image_segmentation_keras.ipynb
notebooks/04_natural_language_processing/: 10_text_processing_keras_layers.ipynb  11_transformers_attention_keras.ipynb  12_nlp_applications_tfhub.ipynb
notebooks/05_generative_models/: 13_gans_with_tensorflow_keras.ipynb  14_vaes_advanced_gans_keras.ipynb  15_diffusion_models_keras.ipynb
notebooks/06_model_optimization/: 16_tensorflow_model_optimization.ipynb  17_model_export_tflite_conversion.ipynb  18_cross_platform_model_export.ipynb
notebooks/07_advanced_topics/: 19_distributed_training_strategies.ipynb  20_research_implementations_keras.ipynb
notebooks/08_reinforcement_learning/: 23_rl_fundamentals_keras.ipynb
notebooks/capstone_projects/: 21_multimodal_ai_system.ipynb  22_end_to_end_ml_pipeline.ipynb
notebooks/supplementary/: federated_learning.ipynb  hyperparameter_tuning_keras_tuner.ipynb  meta_learning_fewshot.ipynb  time_series_forecasting.ipynb
scripts/: __init__.py  convert_models.py  evaluate_models.py  generate_docs.py  serve_model.py  setup_environment.sh  train_models.py
src/: __init__.py  data_utils.py  export_utils.py  model_utils.py  optimization_utils.py  training_utils.py  visualization.py
tests/: __init__.py  test_data_utils.py  test_edge_cases.py  test_export_comprehensive.py  test_integration.py  test_model_utils.py  test_notebooks.py  test_optimization.py  test_stress_and_performance.py  test_tensorflow_keras_layers.py
