[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tensorversehub"
version = "1.0.0"
description = "Comprehensive TensorFlow learning hub with 27 hands-on notebooks and production utilities"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "Satvik Praveen", email = "contact@tensorversehub.com" }]
keywords = [
  "tensorflow",
  "keras",
  "machine-learning",
  "deep-learning",
  "computer-vision",
  "nlp",
  "generative-models",
  "model-optimization",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"

# Core runtime dependencies (keep minimal — see requirements.txt for full list)
dependencies = [
  "tensorflow>=2.13.0,<2.14.0",
  "numpy>=1.24.0,<1.25.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "scikit-learn>=1.3.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=23.9.0",
  "flake8>=6.1.0",
  "isort>=5.12.0",
  "mypy>=1.6.0",
  "pre-commit>=3.5.0",
]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.4.0",
  "mkdocstrings[python]>=0.23.0",
]
serving = [
  "flask>=3.0.0",
  "streamlit>=1.28.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
]
gpu = ["tensorflow-gpu>=2.13.0,<2.14.0"]
all = ["tensorversehub[dev,docs,serving]"]

[project.urls]
Homepage = "https://github.com/SatvikPraveen/TensorVerseHub"
"Bug Tracker" = "https://github.com/SatvikPraveen/TensorVerseHub/issues"
Documentation = "https://satvikpraveen.github.io/TensorVerseHub"
"Source Code" = "https://github.com/SatvikPraveen/TensorVerseHub"
Changelog = "https://github.com/SatvikPraveen/TensorVerseHub/blob/main/CHANGELOG.md"

[project.scripts]
tensorverse-train    = "scripts.train_models:main"
tensorverse-evaluate = "scripts.evaluate_models:main"
tensorverse-convert  = "scripts.convert_models:main"

# ── Tool configurations ────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.md"]

# ── Black ──────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | venv
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

# ── isort ─────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src", "scripts"]
skip_glob = ["venv/*", "*.egg-info/*"]

# ── mypy ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
warn_return_any = false
warn_unused_ignores = true
exclude = ["venv/", "build/", "dist/"]

# ── pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
]
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "gpu: marks tests that require GPU",
  "integration: marks integration tests",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning:tensorflow",
]

# ── Coverage ──────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "pass",
]
show_missing = true
skip_covered = false
